.apex/unpackaged/objects/redwing__Learning_Version__c.object
<CustomObject>
    <fields>
        <fullName>redwing__CheckIn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CheckIn</label>
        <referenceTo>redwing__CheckIn__c</referenceTo>
        <relationshipLabel>Learning Versions</relationshipLabel>
        <relationshipName>Learning_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Content_ID__c</fullName>
        <formula>IF(
!ISBLANK(redwing__Task__c),
redwing__Task__c,
IF(!ISBLANK(redwing__Training_Resource__c),
redwing__Training_Resource__c,
IF(!ISBLANK(redwing__Quiz__c),
redwing__Quiz__c
,&quot;&quot;)
)
)</formula>
        <label>Learning Content ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Learning Versions</relationshipLabel>
        <relationshipName>Learning_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__Quiz__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quiz</label>
        <referenceTo>redwing__Quiz__c</referenceTo>
        <relationshipLabel>Learning Versions</relationshipLabel>
        <relationshipName>Learning_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__RichText__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rich Text</label>
        <referenceTo>redwing__RichText__c</referenceTo>
        <relationshipLabel>Learning Versions</relationshipLabel>
        <relationshipName>Learning_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>redwing__Task__c</referenceTo>
        <relationshipLabel>Learning Versions</relationshipLabel>
        <relationshipName>Learning_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Resource</label>
        <referenceTo>redwing__Training_Resource__c</referenceTo>
        <relationshipLabel>Learning Versions</relationshipLabel>
        <relationshipName>Learning_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preview</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Update_Additional_Information__c</fullName>
        <label>Update Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Update_Errors__c</fullName>
        <label>Update Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Update_Status__c</fullName>
        <label>Update Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Update_Successes__c</fullName>
        <label>Update Successes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Version_selection_behavior__c</fullName>
        <label>Version selection behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ask user for version selection</fullName>
                </value>
                <value>
                    <fullName>Update version on launch</fullName>
                </value>
                <value>
                    <fullName>Update version and reset progress for previous versions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rwscorm__Learning_Course_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Course Item</label>
        <referenceTo>rwscorm__Learning_Course_Item__c</referenceTo>
        <relationshipLabel>Learning Versions</relationshipLabel>
        <relationshipName>Learning_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Version</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <columns>NAME</columns>
        <columns>redwing__Learning__c</columns>
        <columns>redwing__Learning_Content_ID__c</columns>
        <columns>redwing__Quiz__c</columns>
        <columns>redwing__Task__c</columns>
        <columns>redwing__Training_Resource__c</columns>
        <columns>redwing__Type__c</columns>
        <columns>redwing__Version__c</columns>
        <columns>redwing__Version_selection_behavior__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LEV-{0000000}</displayFormat>
        <label>Learning Version ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>